# GoatBook-Source

./: .gitignore  .mergify.yml  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  临时
.cache/plugin/git-committers/: page-authors.json
.github/: reviewers.yml
.github/workflows/: auto-comment-pr.yml  auto_merge.yml  auto_request_review.yml  automerge.yml  github-actions-netlify.yml  github-actions-pages.yml
docs/: index.md  jljcwyh.md  lemonhufu.md  lsys.md  meeting.md  name.md  todeveloper.md  隐藏条帮助.md
docs/image/: example.md
docs/js/: oh_my_l2d.html
docs/l2d_model/mihari/: mihari.cdi3.json  test0.can3
docs/l2d_model/mihari/anime/: Scene1.motion3.json
docs/l2d_model/model/: 借物表.txt
docs/name/: article.md  name.md  name_thing.md
docs/stylesheets/: extra.css
docs/thing/: faan.md  jljcwyh.md  lemonhufu.md  lsys.md  meeting.md  objection.md  qiyang.md  ssjl  ssjl.md
docs/thing/history/: lsys.md  ys.md
docs/thing/wycz/: 茕羊集.md  青金石集.md
site/: 404.html  index.html
site/image/example/: index.html
site/js/: autoload.js
site/l2d_model/mihari/: mihari.model3.json
site/lsys/: index.html
site/meeting/: index.html
site/name/: index.html
site/name/name/: index.html
site/name/name_thing/: index.html
site/search/: search_index.json
site/thing/faan/: index.html
site/thing/history/lsys/: index.html
site/thing/jljcwyh/: index.html
site/thing/lemonhufu/: index.html
site/thing/lsys/: index.html
site/thing/meeting/: index.html
site/thing/objection/: index.html
site/todeveloper/: index.html
(+1 files in other folders)
